style.css
body {
    display: flex;
    width: auto;
    flex-direction: column;
    max-width: 100%;
}

html {
    max-width: 100vw;
    overflow-x: hidden;
}

header {
    display: flex;
    max-width: 100%;
    
}

main {
    display: flex;
    flex-direction: column;
}

.navbar {
    background-color: white;
    display: flex;
    position: fixed;
    z-index: 1000;
    max-width: 100%;
    width: 100%;
    justify-content: space-between;
    top: 0;
    left: 0;
    height: 64px;
    align-content: center;
    padding-right: 24px;
}

li {
    display: flex;
    align-items: center;
}

.navlinks a {
    align-self: auto;
    text-decoration: none;
    color: black;
    padding-left: 16px;
}

.navlinksmobile {
    display: none;
}

.logo  {
    display: flex;
    align-items: center;
    align-content: center;
    text-align: center;
    height: 100%;
}

.logo img{
    height: 32px;
    width: auto;
    align-self: center;
    padding-left: 24px;
}

/* Banner Section */

.banner {
    display: flex;
    flex-direction: row;
    position: relative;
    width: 100%;
    background-color: rgb(209, 211, 211);
    margin-top: 64px;
}

.bannerimg {
    box-sizing: border-box;
    display: flex;
    flex: 1 0 60%;
    max-width: 60%;
    padding: 0px 12px 32px 24px;
}

.bannerimg img {
    width: 100%;
    max-height: 100%;
    min-width: 0;
    
}

.bannerinfo {
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    justify-content:space-around;
    margin-top: 32px;
    padding-bottom: 64px;
    margin-left: 24px;
    flex: 1 0 40%;
    max-width: 40%;
    max-height: 100%;
}

.bannerinfo p {
    font-size: 1.2rem;
    
}

.bannerinfomobile {
    display: none;
}

.bannerinfo h1 {
    font-weight: bold;
    padding: 20px 0px;
}

.bannerinfo h2 {
    padding: 20px 0px;
} 

.bannerinfo button {
    justify-content: center;
    align-items: center;
    display: inline-flex;
    height: 60px;
    max-width: 80%;
    margin: 20px 0px;
    padding: 8px 0px;
    background-color: rgb(97, 96, 96);
}

/* Information Section */
/*
main {
    display: flex;
    flex-direction: column;
} */

.first {
    display: flex;
    flex-direction: row;
    margin-bottom: 32px;
}

.information {
    display: flex;
    max-width: 60%;
    box-sizing: border-box;
    flex-direction: column;
    padding: 32px 12px 0px 24px;
    
}

.information p {
    margin-top: 24px;
}

.information img {
    display: flex;
    width: 100%;
    max-height: fit-content;
    min-width: 0;
}

.asideinfo {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 40%;
    max-width: 40%;
    max-height: auto;
    height: auto;
    margin: 32px 0px 0px 16px;
}

.asideinfomobile {
    display: none;
}

.mini {
    display: flex;
    flex-direction: row;
    align-items: center;
}

.mini img {
    display: flex;
    flex: 1 1 35%;
    height: auto;
    min-width: 0;
    min-height: 0;
    margin: 16px 16px;
}

.miniinfo {
    display: flex;
    flex-direction: column;
    justify-content: center;
    width: 65%;
}

.miniinfo a {
    text-decoration: none;
}

/*Courses Section */

.second {
    display: flex;
    box-sizing: border-box;
    flex-direction: column;
    align-items: center;
    padding: 32px 61px 32px 61px;
    background-color: rgb(209, 211, 211);
} 

.second h1 {
    padding-bottom: 16px;
}

.coursesmobile {
    display: none;
}

.courses {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

.coursebox {
    display: flex;
    flex-direction: column;
    margin: 16px 16px 32px 16px;
    background-color: white;
}

.coursebox-end {
    display: flex;
    flex-direction: column;
    margin: 16px 16px 32px 16px;
    background-color: white;
}

.coursebox img, .coursebox-end img {
    height: auto;
}

.textbox {
    display: flex;
    flex-direction: column;
    align-items: left;
    margin-left: 16px;
    margin-bottom: 24px;
}

.textbox h3 {
    font-weight: bold;
    margin-top: 16px;
}

.textbox h5 {
    line-height: 200%;
}

.textbox h4, .textbox h5 {
    margin-top: 8px;
}

.third {
    display: flex;
    flex-direction: row;
    margin-bottom: 32px;
}

.thesis {
    display: flex;
    width: 60%;
    box-sizing: border-box;
    flex-direction: column;
    padding: 32px 12px 0px 24px;
    margin-bottom: 32px;
    align-items: center;
}

.thesistitle {
    text-align: center;
    margin-top: 32px;
    margin-bottom: 0;
    padding: 0;
}

.viddiv {
    max-width: 100%;
    box-sizing: border-box;
    flex-direction: column;
    padding: 0px 24px 24px 24px;
}

.viddiv video {
    width: 100%;
    max-height: auto;
    min-width: 0;
}

.vidinfo {
    max-width: 100%;

}


.asidevid {
    display: flex;
    flex-direction: column;
    justify-content: top;
    width: 40%;
    max-width: 40%;
    max-height: auto;
    height: auto;
    margin: 0px 0px 0px 16px;
    padding-top: 32px;
}

.minivid {
    display: flex;
    flex-direction: row; 
    align-items: center;
}

.minivid img {
    width: 35%;
    max-height: 100%;
    min-width: 0;
    max-height: auto;
    height: auto;
    margin: 16px 16px;
}

footer {
    display: flex;
    justify-content: space-between;
    margin-right: 24px;
}

.mobilefooter {
    display: none;
}

/* Mobile Site */

@media only screen and (max-width: 645px) {

    body {
        flex-direction: column;
    }

    header {
        max-height: 80vh;
    }

    .navbar {
        display: flex;
        position: fixed;
        flex-direction: row;
        justify-items: center;
        max-width: 100vw;
        height: 64px;
        z-index: 1000;
    }

    .logo {
        width: 30%;
    }

    .logo h5 {
        visibility: hidden;
    }

    .navlinks a {
        visibility: hidden;
        max-width: 80%;
    }

    .navlinks {
        display: none;
    }

    .navlinksmobile {
        display: flex;
        justify-content: space-between;
        max-width: 70%;
        width: 70%;
    }

    main {
        display: block;
        flex-direction: column;
    }

    .banner {
        display: flex;
        flex-flow: column;
        flex-direction: column;
        width: 100vw;
        max-height: 100vh;
        height: 100%;
    }

    .bannerimg img {
        max-width: 100vw;
        object-fit: cover;
        max-height: auto;
    }
    
    .bannerimg {
        padding-left: 0;
        flex: 1 0 100%;
        max-width: 100%;
    }

    .bannerinfo {
        display: none;
    }

    .bannerinfomobile {
        display: flex;
        box-sizing: border-box;
        flex-direction: column;
        margin-left: 16px;
        max-width: 100%;
    }

    .bannerinfomobile h1 {
        margin-bottom: 0px;
    }

    .bannerinfomobile h4 {
        margin: 32px 0px;
    }

    .bannerinfomobile button {
        justify-content: center;
        align-items: center;
        display: inline-flex;
        height: 60px;
        max-width: 80%;
        margin: 20px 0px;
        padding: 8px 0px;
        background-color: rgb(97, 96, 96);
    }

    .first {
        display: flex;
        flex-flow: column;
        flex-direction: column;
        width: 100%;
        overflow-y: auto;
    }

    #campus {
        display: none;
    }

    .asideinfo {
        display: none;
    }

    .asideinfomobile {
        display: flex;
        flex-direction: column;
        flex-wrap: wrap;
        margin: 0 16px;
        max-width: 100vw;
        box-sizing: border-box;
    }

    .minimobile {
        max-width: 100%;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        margin: 16px 0px;
    }

    .minimobile img {
        display: block;
        object-fit: contain;
        width: 100%;
        height:auto;
        padding: 0 16px;
    }

    .miniinfomobile {
        display: flex;
        flex-direction: column;
        width: 100vw;
        padding-left: 32px;
    }

    /*Courses Section */

    .second {
        background-color: white;
    }

    .courses {
        display: none;
    }

    .coursesmobile {
        display: flex;
        width: 100vw;
        flex-direction: column;
    }

    .second {
        padding: 32px 0px;
    }

    .textbox {
        padding: 16px 16px 24px 16px;
        margin: 0;
    }

    .courseboxmobile {
        display: flex;
        flex-direction: column;
        max-width: 100vw;
        margin: 4px 16px;
        background-color: rgb(209, 211, 211);
    }

    /*Video Section */

    .thesis {
        width: 100vw;
        padding: 16px 0px 24px 0px;
        margin-bottom: 0;
    }

    .third {
        margin-bottom: 0;
    }

    .thesistitle h1 {
        margin: 0;
    }

    .vidinfo {
        display: none;
    }

    .asidevid {
        display: none;
    }

    .viddiv {
        padding: 0;
        max-height: auto;
        object-fit: fill
    }

    footer {
        display: flex;
        justify-content: center;
        margin-top: 0px;
    }

    .nonmobfoot {
        display: none;
    }

    .mobilefooter {
        display: flex;
        margin: 0 16px 0 16px 0;   
    }

    .mobilefooter p{
       padding: 16px 0;
       margin-bottom: 0;
       color: gray;
    }

}

